// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generate llms.txt should generate llms.txt 1`] = `
[
  {
    "type": "return",
    "value": 
"# Test

> Test description

Test details

- [Test link](https://test.com): Test link description

# Second test

> Second test description

# Third test

Third test details

- [Third test link](https://third.test.com)"
,
  },
]
`;

exports[`generate markdown files should generate markdown files 1`] = `
[
  {
    "type": "return",
    "value": 
"---
title: Test
description: Test description
sidebar:
  order: 1
  title: Custom sidebar title
---

# Test

Test description


\`\`\`js
console.log("Hello, world!");
\`\`\`
"
,
  },
]
`;

exports[`generate markdown files should generate markdown files with custom frontmatter 1`] = `
[
  {
    "type": "return",
    "value": 
"---
title: Test
description: Test description
---

# Test

Test description


\`\`\`js
console.log("Hello, world!");
\`\`\`
"
,
  },
]
`;
